--- a/manifests/plugin/controller-patch.yaml
+++ b/manifests/plugin/controller-patch.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   template:
     spec:
-      imagePullSecret:
+      imagePullSecrets:
         - name: aws-ecr-secret
       initContainers:
         - name: plugin-installer
